--- a/src/global.style.module.css
+++ b/src/global.style.module.css
@@ -76,6 +76,8 @@ border-spacing: 0;
   --nude: #D9A066;
   --rose: #EE836F;
   --navy: #1A3042;
+  --grey: #586B7D;
+  --light-blue: #A6BED4;
   --off-white: #F7F8FC;
   --black: #000000;
 }
