--- a/src/pages/Hall/hall.style.module.css
+++ b/src/pages/Hall/hall.style.module.css
@@ -3,7 +3,6 @@ body {
 }
 .header{
  display: flex;
- justify-content: space-around;
 }
 
 .containerLogin {
@@ -22,7 +21,8 @@ body {
 
 .tittleMenu{
  color: var(--black);
- margin-top: 10%;
+
+ margin: 10% 0 0 25%;
  font-size: 1.5em;
 }
 
