--- a/src/global.style.module.css
+++ b/src/global.style.module.css
@@ -11,7 +11,7 @@ body {
   box-sizing: border-box;
 }
 
-html, body, div, span, applet, object, iframe,
+html, body, div, button,span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
@@ -22,7 +22,8 @@ fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
 margin: 0;
 padding: 0;
-border: 0;
+border: none;
+box-sizing: border-box;
 outline: 0;
 font-size: 100%;
 vertical-align: baseline;
