--- a/src/pages/Hall/hall.style.module.css
+++ b/src/pages/Hall/hall.style.module.css
@@ -1,8 +1,13 @@
+@import "./../../global.style.module.css";
+
 body {
   background-color: var(--light-blue);
 }
 .header{
- display: flex;
+ display: flex; 
+ border-bottom: solid 2px;
+ margin: 3% 0;
+ /* justify-content: space-around; */
 }
 
 .containerLogin {
@@ -15,14 +20,18 @@ body {
 }
 
 .menuItem{
-  margin: 1000px 0;
-  background: red;
+  font-size: 1.5em;
+  margin-top: 10px;
+  padding: 10px;
 }
-
 .tittleMenu{
  color: var(--black);
-
- margin: 10% 0 0 25%;
  font-size: 1.5em;
+  margin-top: 2%;
 }
-
+.optionsMenu{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 7%;
+  border-bottom: solid 2px;
+}
