--- a/src/components/Cards/cards.style.module.css
+++ b/src/components/Cards/cards.style.module.css
@@ -1,13 +1,13 @@
-.sectionCard{
-  display: flex;
-}
 .ulCard{
+  display: flex;
+  flex-wrap: wrap;
   height: 30vh;
   width: 30vw;
   justify-content: center;
   background-color: var(--grey);
   border-radius: 10px;
 }
+.liCards{}
 .imgMenu{
   width: 50px;
   height: 50px;
