--- a/src/global.style.module.css
+++ b/src/global.style.module.css
@@ -11,8 +11,8 @@ body {
   box-sizing: border-box;
 }
 
-html, body, div, button,span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+html, body, div, section, button,span, applet, object, iframe,
+ blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -25,19 +25,12 @@ padding: 0;
 border: none;
 box-sizing: border-box;
 outline: 0;
-font-size: 100%;
 vertical-align: baseline;
 background: transparent;
 text-decoration: none;
 list-style-type: none
 }
-body {
-line-height: 1;
-  height: 100%;
-}
-ol, ul {
-list-style: none;
-}
+
 blockquote, q {
 quotes: none;
 }
