--- a/src/components/Cards/cards.style.module.css
+++ b/src/components/Cards/cards.style.module.css
@@ -1,24 +1,19 @@
-.ulCard{
-  display: flex;
-  flex-wrap: wrap;
-  height: 30vh;
-  width: 50vw;
-  justify-content: center;
-  background-color: var(--grey);
-  border-radius: 10px;
-}
-.liCards{}
-.imgMenu{
-  width: 50px;
-  height: 50px;
-}
-.id{
-  visibility: hidden;
-}
+@import "./../../global.style.module.css";
 
+.listCards{
+  display: flex;
+  flex-direction: column;
+  width: 180px;
+  border-radius: 15px;
+  gap: 10px;
+  background-color: var(--grey);
+  text-align: center;
+}
+.imgMenu{
+  /* width: 50px; */
+  height: 100%;
+  border-radius: 10px 10px 0 0;
+}
 li{
   list-style-type: none;
-}
-.imgAdd{
-  height: 30px;  
 }
