--- a/src/components/InputInfoClient/inputInfoClient.style.module.css
+++ b/src/components/InputInfoClient/inputInfoClient.style.module.css
@@ -1,6 +1,8 @@
+@import "./../../global.style.module.css";
+
 .inputInfoClient {
   display: block;
-  border: solid 1px transparent;
+  border: solid 2px var(--black);
   border-radius: 5px;
   margin-right: 2%;
   width: 35%;
