--- a/src/components/TemplateOrder/template.style.module.css
+++ b/src/components/TemplateOrder/template.style.module.css
@@ -2,11 +2,14 @@
   width: 100%;
   height: 90%;
   font-size: 20px;
-  border-bottom:  1px solid var(--black);
+  border-bottom:  3px solid var(--black);
 }
 .nameProduct{
   font-size: 20px;
 }
+.btnRemove{
+  height: 80px;
+}
 .imgRemove{
-  height: 20px;
+  height: 100%;
 }
