--- a/src/pages/Hall/hall.style.module.css
+++ b/src/pages/Hall/hall.style.module.css
@@ -8,7 +8,6 @@
  align-items: center;
  border-bottom: solid 2px;
 }
-
 .menuItem{
   font-size: 1.5em;
   margin-top: 10px;
@@ -32,8 +31,18 @@
   justify-content:flex-end;
   align-items: center;
 }
-.sectionCard{
+.sectionCards{  
+  height: calc(100vh - 180px);
+  width: 100%;
+  margin-top: 5%;
+  overflow: auto;
+}
+.containerProducts{
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  justify-content: space-between;
+  gap:10px;
 }
