fix: styling counter button

--- a/src/components/ButtonCounter/counter.style.module.css
+++ b/src/components/ButtonCounter/counter.style.module.css
@@ -3,6 +3,8 @@
   justify-content: space-around;
   align-items: center;
   gap: 10px;
+  background-color: var(--grey);
+  border-radius: 0 0 10px 10px;
 }
 .imgIncrease, .imgDecrease{
   height: 30px;
