--- a/src/pages/Hall/hall.style.module.css
+++ b/src/pages/Hall/hall.style.module.css
@@ -37,6 +37,11 @@
   margin-top: 5%;
   overflow: auto;
 }
+
+.containerCards{
+  background-color: var(--grey);
+  border-radius: 10px;
+}
 .containerProducts{
   display: flex;
   flex-wrap: wrap;
