--- a/src/components/Cards/cards.style.module.css
+++ b/src/components/Cards/cards.style.module.css
@@ -10,9 +10,11 @@
   text-align: center;
 }
 .imgMenu{
-  /* width: 50px; */
   height: 100%;
   border-radius: 10px 10px 0 0;
+}
+.nameProduct{
+  font-size: large;
 }
 li{
   list-style-type: none;
