--- a/src/components/TemplateOrder/template.style.module.css
+++ b/src/components/TemplateOrder/template.style.module.css
@@ -1,11 +1,20 @@
-.UlTemplate{
+.liTemplate{
   width: 100%;
   height: 90%;
-  font-size: 20px;
-  border-bottom:  3px solid var(--black);
+  font-size: 1.25em;
 }
-.nameProduct{
-  font-size: 20px;
+.div, .complement{
+  display: flex;
+  gap: 20px;    
+  width: 100%;
+}
+.complement{
+  margin-left: 8%;
+}
+
+.productName{ 
+  font-weight: bold;
+  width: 40%;
 }
 .btnRemove{
   height: 80px;
